--- a/videos2.html
+++ b/videos2.html
@@ -106,17 +106,17 @@ function menuFunction() {
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
     <h3>Andy B Goode</h3>
-    <p><a href="videos.html#videoSummerShowReel2016">Andy B Goode Summer Showreel 2016</a><br/>
-<a href="videos.html#videoTeenagerInLove">Teenager in Love</a><br/>
-<a href="videos.html#videoJohnnyBGoode">Johnny B. Goode</a><br/>
-<a href="videos.html#videoEarthAngel">Earth Angel</a></p>
+    <p><a href="#videoSummerShowReel2016">Andy B Goode Summer Showreel 2016</a><br/>
+<a href="#videoTeenagerInLove">Teenager in Love</a><br/>
+<a href="#videoJohnnyBGoode">Johnny B. Goode</a><br/>
+<a href="#videoEarthAngel">Earth Angel</a></p>
   </div>
 
   <div class="w3-third w3-black">
     <h3>The Jays Vintage</h3>
-    <p><a href="videos.html#videoAppleTreeLive">Don't Sit Under The Apple Tree (Live)</a><br/>
-<a href="videos.html#videoInTheMoodLive">In The Mood (Live)</a><br/>
-<a href="videos.html#videoSantaClausLive">Santa Claus is Coming To Town (Live)</a></p>
+    <p><a href="#videoAppleTreeLive">Don't Sit Under The Apple Tree (Live)</a><br/>
+<a href="#videoInTheMoodLive">In The Mood (Live)</a><br/>
+<a href="#videoSantaClausLive">Santa Claus is Coming To Town (Live)</a></p>
   </div>
 
   <div class="w3-third w3-black">
@@ -130,16 +130,15 @@ function menuFunction() {
     <h2>Summer Showreel</h2>
     <p>You could play 'name that tune' while you listen.</p>
 	<p>Snippets of many of my songs can be seen in my 'Andy B Goode Summer Showreel 2016'. This was recorded live at St Pauls Church Dosthill Summer Vintage Fete.</p>
-	<p><iframe class="w3-half-video-iframe"  src="https://www.youtube.com/embed/f4x4ei3muL8" frameborder="0" allowfullscreen></iframe></p>
+	<p><iframe class="w3-half-video-iframe"  src="https://www.youtube.com/embed/f4x4ei3muL8" allowfullscreen></iframe></p>
   </div>
 
   <div id="videoTeenagerInLove" class="w3-half-video w3-black">
     <h2>Teenager In Love</h2>
     <p>It's great to hear people joining in at the chorus. This was recorded at the Dosthill Summer Vintage Fayre. I also performed this song on on TCR FM at the 'Norton Juxta Twycross Summer Fete.</p>
-	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/xfGqHgRePIY" frameborder="0" allowfullscreen></iframe></p>
+	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/xfGqHgRePIY" allowfullscreen></iframe></p>
   </div>
 </div>
-
 
 
 <div class="w3-row-padding">
@@ -147,28 +146,28 @@ function menuFunction() {
     <h2>Johnny B. Goode</h2>
     <p>Feel free to sing along.<br/>
 'Johnny B. Goode' originally by the fantastic Chuck Berry. 'Back to the Future' is one of my favourite movies, and this track really adds energy to the film.</p>
-	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/9E8LMdoa5co" frameborder="0" allowfullscreen></iframe></p>
+	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/EvSlu1k60ow" allowfullscreen></iframe></p>
   </div>
 
   <div id="videoEarthAngel" class="w3-half w3-black">
     <h2>Earth Angel</h2>
     <p>'Earth Angel' from originally by 'The Penguins'. I just keep singing songs from the 'Back to the Future' movie.</p>
-	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/oRQt2_bjvMU" frameborder="0" allowfullscreen></iframe></p>
+	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/oRQt2_bjvMU" allowfullscreen></iframe></p>
   </div>
 </div>
 
 
 <div class="w3-row-padding">
-  <div id="videoInTheMoodLive" id="videoAppleTreeLive" class="w3-half w3-black">
+  <div id="videoAppleTreeLive" class="w3-half w3-black">
     <h2>Dont Sit Under The Apple Tree 'Live'</h2>
     <p>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Andrews Sister's classic, "Don't Sit Under The Apple Tree". This was recorded live at cute Red Carpet Cinema at Barton Marina.</p>
-	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/xCA3tkEdPoc" frameborder="0" allowfullscreen></iframe></p>
+	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/xCA3tkEdPoc" allowfullscreen></iframe></p>
   </div>
 
   <div id="videoInTheMoodLive" class="w3-half w3-black">
     <h2>In The Mood 'Live'</h2>
     <p>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Andrews Sister's classic, "In The Mood" and it certainly was mood lighting that night. This was recorded live at Red Carpet Cinema at Barton Marina.</p>
-    <p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/jmuOGvFlFhw" frameborder="0" allowfullscreen></iframe></p>
+    <p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/jmuOGvFlFhw" allowfullscreen></iframe></p>
   </div>
 </div>
 
@@ -178,7 +177,7 @@ function menuFunction() {
   <div id="videoSantaClausLive" class="w3-half w3-black">
     <h2>Santa Claus Is Coming To Town 'Live'</h2>
     <p>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Perry Como Christmas classic, "Santa Claus is Coming To Town". This was recorded live at Red Carpet Cinema at Barton Marina.</p>
-    <p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/9WMEWi1d5m4" frameborder="0" allowfullscreen></iframe></p>
+    <p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/9WMEWi1d5m4" allowfullscreen></iframe></p>
 </div>
 
   <div class="w3-half w3-black">
